# aptible-api

./: LICENCE.md  Pipfile  README.md  setup.cfg  setup.py
aptible/api/: __init__.py
aptible/api/manager/: __init__.py  empty_response.py
aptible/api/model/: __init__.py  empty_resource.py  resource.py
src/aptible/api/: config.py  error.py
src/aptible/api/manager/: __init__.py  api_manager.py  aptible_api.py  aptible_auth_api.py  url_util.py
src/aptible/api/model/: __init__.py  empty_resource.py  resource.py
