[metadata]
name = aptible-api
version = 0.1.0
author = Zachary Elliott
author_email = zellio@example.com
description = Provides an OO interface to the Aptible API
long_description = file: README.md
url = https://github.com/TrialSpark/aptible-api
project_urls =
    Bug Tracker = https://github.com/TrialSpark/aptible-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    'PyYAML>=5.4'
    'inflection>=0.5'
    'requests>=2.25'

[options.packages.find]
where = src
